# Spell-Checker

./: CMakeLists.txt  README.md  a.out  main.cpp
src/: CMakeLists.txt  levenshtein.cpp  levenshtein.h  main.cpp
test/: CMakeLists.txt  main.cpp
